- Don't try and parse/use AQ-only mounts. If you're in AQ and want to use one of these, you'll have to do it manually.
- Updated koKR locale, thanks to DroArc

1.3
- Fairly significant change in the SV setup. This version WILL wipe out your previous SVs and reset your settings to the defaults (every mount enabled). Sorry for the inconvenience, but this change allowed..
- Added support for Headless Horseman's mount (hopefully). The infrastructure changes should support future flight-capable mounts that are usable as ground mounts in non-flying areas.

1.2.4
- Added support for the two "dynamic speed" mounts ('Big Blizzard Bear' and 'Winged Steed of the Ebon Blade') whose speeds adjust to your riding skill. These mounts should properly show up now.

1.2.3
- Implemented functions for the "Cancel" and "Defaults" buttons in the Options UI. "Defaults" will reset your selections to the defaults, which is -EVERYTHING ENABLED-. Don't say I didn't warn you.
- Hopefully sqashed a bunch of bugs causing the Options UI to not update the status of checkboxes properly, and cause the selection to not affect the mounts used for random summoning. FauxScrollFrames can suck it.

1.2.2
- Fix a bug that would cause the Options UI to not update properly after learning a mount.
- Fix some typos/bugs with naming and parenting of the Flying Mount scroll frame.
- Fix a bug with the sizing of the Flying Mount Scroll frame.

1.2.1
- The Options panels now use a scrolling frame to display the mount checkboxes, showing a maximum of 15 checkboxes at once. This should avoid ugliness if you have a lot of mounts.

1.2
- Added the ability to filter which mounts are used for random selection. (Yes. I lied when I said I had no plans to do this. Sue me.)
- Added a UI in the Interface Options to select which mounts to use in the random selection. Note: This only allows you to select among your "best" mounts.